--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -129,23 +129,23 @@
 			style="width: 1.5em;margin-right: .2em;vertical-align: bottom;">GitHub 文件加速</h1>
 	<form action="./" method="get" style="padding-bottom: 40px" target="_blank" class="flex" onsubmit="toSubmit(event)">
 		<label class="block" style="width: fit-content">
-			<input class="block url" name="q" type="text" placeholder="键入Github文件链接"
-				pattern="^(?:https?:\/\/)?(?:(raw\.githubusercontent)|github)\.com(\/[A-Za-z0-9\-\._~:\/\?#\[\]@!$&'\(\)\*\+,;\=]*)?"
-				required>
+			<input class="block url" name="q" type="text" placeholder="键入Github文件链接" required>
 			<div class="bar"></div>
 		</label>
 		<input class="block btn" type="submit" value="下载">
 		<div class="tips">
-			<p>GitHub文件链接带不带协议头都可以，支持release、archive以及文件，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a
+			<p>GitHub文件链接带不带协议头都可以，支持release、archive、文件以及网页浏览，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a
 					href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
 			<p>release、archive使用cf加速，文件会跳转至JsDelivr</p>
 			<p>注意，不支持项目文件夹</p>
 		</div>
 		<div class="example">
+			<p>网页：https://github.com</p>
+			<p>Gist: https://gist.github.com</p>
 			<p>分支源码：https://github.com/hunshcn/project/archive/master.zip</p>
 			<p>release源码：https://github.com/hunshcn/project/archive/v0.1.0.tar.gz</p>
 			<p>release文件：https://github.com/hunshcn/project/releases/download/v0.1.0/example.zip</p>
-			<p>分支文件：https://github.com/hunshcn/project/blob/master/filename</p>
+			<p>分支文件：https://github.com/hunshcn/project/raw/master/filename</p>
 		</div>
 	</form>
 	<p style="position: sticky;top: calc(100% - 2.5em);">项目基于Cloudflare Workers，复刻自GitHub <a style="color: #3294ea"
