--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -15,6 +15,6 @@
 <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-messaging.js"></script>
-<script src="js/index.js"></script>
+<script src="index.js"></script>
 
 </html>
