--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -6,11 +6,18 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>free game notification</title>
+	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 
 <body>
 	<button id="subscribe" onclick="sub()">订阅</button>
 	<button id="unsubscribe" onclick="unsub()">取消订阅</button>
+	<div id="app">
+		<h1>游戏列表</h1>
+		<li v-for="item of slugs">
+			<a :href="'https://www.epicgames.com/store/zh-CN/p/'+item.slug" target="_blank" rel="noopener noreferrer">{{item.name}}</a>
+		</li>
+	</div>
 </body>
 <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
