--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-	<button id="subscribe" onclick="sub()">订阅</button>
-	<button id="unsubscribe" onclick="unsub()">取消订阅</button>
 	<div id="app">
+		<button id="subscribe" @onclick="sub">订阅</button>
+		<button id="unsubscribe" @onclick="unsub">取消订阅</button>
 		<h1>游戏列表</h1>
 		<li v-for="item of slugs">
 			<a :href="'https://www.epicgames.com/store/zh-CN/p/'+item.slug" target="_blank" rel="noopener noreferrer">{{item.name}}</a>
