fix: using jsdelivr to host static file
using jsdelivr instead of unpkg to avoid setting mime type of
css file as text/plain

--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>free game notification</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-	<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-	<script src="https://unpkg.com/element-ui/lib/index.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui/lib/theme-chalk/index.css">
+	<script src="https://cdn.jsdelivr.net/npm/element-ui/lib/index.js"></script>
 </head>
 
 <body>
