--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - :(</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="/404/style.css">
+    <script src="/404/index.js" defer></script>
     <!-- jsdelivr -->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yin1999/yin1999.github.io/404/style.css"> -->
     <!-- <script src="https://cdn.jsdelivr.net/gh/yin1999/yin1999.github.io/404/index.js" defer></script> -->
