fix: only using `HTMLRewriter` when access a html
Now when download github release, the `Content-Type` header will be set.

--- a/gh-proxy/index.html
+++ b/gh-proxy/index.html
@@ -121,8 +121,8 @@
 </head>
 
 <body class="flex">
-	<a style="position: absolute;top: 0;right: 0;" href="https://github.com/yin1999/yin1999.github.io"><img width="149"
-			height="149" referrerPolicy="no-referrer" src="https://inews.gtimg.com/newsapp_ls/0/12025455907/0"
+	<a style="position: absolute;top: 0;right: 0;" href="//github.com/yin1999/yin1999.github.io"><img width="149"
+			height="149" referrerPolicy="no-referrer" src="//inews.gtimg.com/newsapp_ls/0/12025455907/0"
 			alt="Fork me on GitHub" data-recalc-dims="1"></a>
 	<h1 style="margin-bottom: 50px"><svg height="1.4em" viewBox="0 0 16 16" width="1.4em"
 			style="margin-right: .2em;vertical-align: bottom;">
@@ -138,7 +138,7 @@
 		<button class="block btn" type="submit">下载</button>
 		<div class="tips">
 			<p>GitHub文件链接带不带协议头都可以，支持release、archive、文件以及网页浏览，右键复制出来的链接都是符合标准的，更多用法、clone加速请参考<a
-					href="https://hunsh.net/archives/23/">这篇文章</a>。</p>
+					href="//hunsh.net/archives/23/">这篇文章</a>。</p>
 			<p>release、archive使用cf加速，文件会跳转至JsDelivr</p>
 			<p>注意，不支持项目文件夹</p>
 		</div>
@@ -152,7 +152,7 @@
 		</div>
 	</form>
 	<p style="position: sticky;top: calc(100% - 2.5em);">项目基于Cloudflare Workers，复刻自GitHub <a style="color: #3294ea"
-			href="https://github.com/hunshcn/gh-proxy">hunshcn/gh-proxy</a>
+			href="//github.com/hunshcn/gh-proxy">hunshcn/gh-proxy</a>
 	</p>
 </body>
 
