--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>free game notification</title>
-	<script src="//cdn.jsdelivr.net/npm/vue@next/dist/vue.global.prod.js"></script>
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css">
-	<script src="//cdn.jsdelivr.net/npm/element-plus/dist/index.full.js"></script>
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus@latest/theme-chalk/el-button.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus@latest/theme-chalk/base.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus@latest/theme-chalk/el-message.css">
 </head>
 
 <body>
@@ -16,13 +16,20 @@
 		<el-button type="info" @click="unsub">取消订阅</el-button>
 		<h1>游戏列表</h1>
 		<li v-for="item of slugs">
-			<a :href="'//www.epicgames.com/store/zh-CN/p/'+item" target="_blank" rel="noopener noreferrer">{{ item }}</a>
+			<a :href="'//www.epicgames.com/store/zh-CN/p/'+item" target="_blank" rel="noopener noreferrer">{{ item
+				}}</a>
 		</li>
 	</div>
 </body>
-<script src="//www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-<script src="//www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
-<script src="//www.gstatic.com/firebasejs/8.7.1/firebase-messaging.js"></script>
-<script src="index.js"></script>
+<script type="importmap">
+{"imports": {
+	"vue": "//cdn.jsdelivr.net/npm/vue@next/dist/vue.esm-browser.prod.js",
+	"element-plus": "//cdn.jsdelivr.net/npm/element-plus@latest/dist/index.full.mjs",
+	"firebase/app": "//www.gstatic.com/firebasejs/9.6.0/firebase-app.js",
+	"firebase/analytics": "//www.gstatic.com/firebasejs/9.6.0/firebase-analytics.js",
+	"firebase/messaging": "//www.gstatic.com/firebasejs/9.6.0/firebase-messaging.js"
+}}
+</script>
+<script type="module" src="./index.js"></script>
 
 </html>
