--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>free game notification</title>
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus@latest/theme-chalk/el-button.css">
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus@latest/theme-chalk/base.css">
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus@latest/theme-chalk/el-message.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/theme-chalk/el-button.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/theme-chalk/base.css">
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/theme-chalk/el-message.css">
 </head>
 
 <body>
@@ -22,8 +22,8 @@
 </body>
 <script type="importmap">
 {"imports": {
-	"vue": "//cdn.jsdelivr.net/npm/vue@next/dist/vue.esm-browser.prod.js",
-	"element-plus": "//cdn.jsdelivr.net/npm/element-plus@latest/dist/index.full.mjs",
+	"vue": "//cdn.jsdelivr.net/npm/vue@3/dist/vue.esm-browser.prod.js",
+	"element-plus": "//cdn.jsdelivr.net/npm/element-plus/dist/index.full.mjs",
 	"firebase/app": "//www.gstatic.com/firebasejs/9.6.0/firebase-app.js",
 	"firebase/analytics": "//www.gstatic.com/firebasejs/9.6.0/firebase-analytics.js",
 	"firebase/messaging": "//www.gstatic.com/firebasejs/9.6.0/firebase-messaging.js"
