fix: using unpkg CDN

--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -5,9 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>free game notification</title>
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/theme-chalk/el-button.css">
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/theme-chalk/base.css">
-	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/theme-chalk/el-message.css">
+	<link rel="stylesheet" href="//unpkg.com/element-plus@2/theme-chalk/el-button.css">
+	<link rel="stylesheet" href="//unpkg.com/element-plus@2/theme-chalk/base.css">
+	<link rel="stylesheet" href="//unpkg.com/element-plus@2/theme-chalk/el-message.css">
 </head>
 
 <body>
@@ -22,11 +22,11 @@
 </body>
 <script type="importmap">
 {"imports": {
-	"vue": "//cdn.jsdelivr.net/npm/vue@3/dist/vue.esm-browser.prod.js",
-	"element-plus": "//cdn.jsdelivr.net/npm/element-plus/dist/index.full.mjs",
-	"firebase/app": "//www.gstatic.com/firebasejs/9.6.6/firebase-app.js",
-	"firebase/analytics": "//www.gstatic.com/firebasejs/9.6.6/firebase-analytics.js",
-	"firebase/messaging": "//www.gstatic.com/firebasejs/9.6.6/firebase-messaging.js"
+	"vue": "//unpkg.com/vue@3/dist/vue.esm-browser.prod.js",
+	"element-plus": "//unpkg.com/element-plus@2/dist/index.full.min.mjs",
+	"firebase/app": "//www.gstatic.com/firebasejs/9.8.0/firebase-app.js",
+	"firebase/analytics": "//www.gstatic.com/firebasejs/9.8.0/firebase-analytics.js",
+	"firebase/messaging": "//www.gstatic.com/firebasejs/9.8.0/firebase-messaging.js"
 }}
 </script>
 <script type="module" src="./index.js"></script>
