--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -16,7 +16,7 @@
 		<el-button type="info" @click="unsub">取消订阅</el-button>
 		<h1>游戏列表</h1>
 		<li v-for="item of slugs">
-			<a :href="'//store.epicgames.com/zh-CN/p/'+item" target="_blank">{{ item }}</a>
+			<a :href="'//store.epicgames.com/zh-CN/'+item" target="_blank">{{ item.substring(item.indexOf('/')+1) }}</a>
 		</li>
 	</div>
 </body>
