fix: use `<ul>` instead for unordered list

--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -12,7 +12,7 @@
 	<button class="blue" id="sub">订阅</button>
 	<button id="unsub">取消订阅</button>
 	<h1>游戏列表</h1>
-	<div id="gameList"></div>
+	<ul id="gameList"></ul>
 </body>
 <script type="importmap">
 {"imports": {
