--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -16,9 +16,10 @@
 </body>
 <script type="importmap">
 {"imports": {
-	"firebase/app": "//www.gstatic.com/firebasejs/9.8.0/firebase-app.js",
-	"firebase/analytics": "//www.gstatic.com/firebasejs/9.8.0/firebase-analytics.js",
-	"firebase/messaging": "//www.gstatic.com/firebasejs/9.8.0/firebase-messaging.js"
+	"firebase/app": "//www.gstatic.com/firebasejs/10.3.0/firebase-app.js",
+	"firebase/analytics": "//www.gstatic.com/firebasejs/10.3.0/firebase-analytics.js",
+	"firebase/database": "//www.gstatic.com/firebasejs/10.3.0/firebase-database.js",
+	"firebase/messaging": "//www.gstatic.com/firebasejs/10.3.0/firebase-messaging.js"
 }}
 </script>
 <script type="module" src="./index.js"></script>
