--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -16,7 +16,7 @@
 </body>
 <script type="importmap">
 {"imports": {
-	"firebase/": "//www.gstatic.com/firebasejs/10.12.2/",
+	"firebase/": "https://www.gstatic.com/firebasejs/10.12.2/",
 }}
 </script>
 <script type="module" src="./index.js"></script>
