build(deps): bump firebasejs from 10.8.1 to 10.12.2 (#6)

--- a/epicfreegame/index.html
+++ b/epicfreegame/index.html
@@ -16,10 +16,7 @@
 </body>
 <script type="importmap">
 {"imports": {
-	"firebase/app": "//www.gstatic.com/firebasejs/10.8.1/firebase-app.js",
-	"firebase/analytics": "//www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js",
-	"firebase/database": "//www.gstatic.com/firebasejs/10.8.1/firebase-database.js",
-	"firebase/messaging": "//www.gstatic.com/firebasejs/10.8.1/firebase-messaging.js"
+	"firebase/": "//www.gstatic.com/firebasejs/10.12.2/"
 }}
 </script>
 <script type="module" src="./index.js"></script>
